# SimpleCT

./: README.md
example/: CMakeLists.txt  README  install  main.cpp  test_128x128.uint8
matlab/: ContourTree.cpp  ContourTreePlot.m  README  example.m  matlab_setup.m
src/: SimpleCT.cpp  SimpleCT.h
